@@ -20,6 +20,9 @@ svn trunk
 * ``egg:Paste#watch_threads`` will show tracebacks of each thread
   under Python 2.5.
 
+* Made ``paste.util.template`` trim whitespace around statements that
+  are on their own line.
+
 1.2.1
 -----
 
